--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
         </style>
+    <style>
+    @import url('https://fonts.cdnfonts.com/css/next-art');
+    </style>
 </head>
 <body>
     <div class="container_head">
